--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -1546,20 +1546,192 @@ h2.ftitle2 {
     left: 47px; bottom: 27px;
     z-index: 500;
 }
-.boxAll iframe {
-    position: absolute; top: 50%; left: 50%;
+.box1 .morphing {
+    position: absolute; left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px; height: 300px;
+    background-color: #bca5e3;
+    border-radius: 70% 80% 90% 70% / 70% 80% 90% 80%;
+    box-shadow:
+        inset 10px 0 40px #a174db,
+        inset -10px 0 20px #40245e,
+        inset -40px 10px 110px #1b1648;
+    animation: morphingmove 10s infinite alternate ease-in-out;
+}
+@keyframes morphingmove {
+    0% {border-radius: 70% 80% 90% 70% / 70% 80% 90% 80%; transform: translate(-50%, -50%) rotate(0deg);}
+    14% {border-radius: 50% 80% 90% 70% / 60% 80% 90% 80%;}
+    28% {border-radius: 90% 70% 60% 90% / 60% 70% 90% 80%;}
+    42% {border-radius: 50% 70% 50% 70% / 60% 80% 60% 80%;}
+    56% {border-radius: 70% 60% 60% 70% / 70% 80% 70% 80%; transform: translate(-50%, -50%) rotate(80deg);}
+    78% {border-radius: 90% 40% 60% 70% / 60% 80% 70% 50%;}
+    84% {border-radius: 80% 80% 70% 70% / 60% 80% 60% 80%;}
+    100% {border-radius: 80% 80% 90% 70% / 60% 50% 80% 80%; transform: translate(-50%, -50%) rotate(0deg);}
+}
+.square {
+    width: 49px; height: 49px;
+    position: absolute;
+    left: 50%; top: 50%;
     transform: translate(-50%, -50%);
 }
+.square::before {
+content: '';
+width: 49px; height: 5px;
+background: #000;
+opacity: 0.1;
+position: absolute; top: 58px; left: 0;
+border-radius: 50%;
+animation: shadow 0.58s linear infinite;
+}
+@keyframes shadow {
+    0% {transform: scale(1,1);}
+    50% {transform: scale(1.2,1);}
+    100% {transform: scale(1,1);}
+}
+.square::after {
+    content: '';
+    width: 49px; height: 49px;
+    background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
+    position: absolute; left: 0; top: 0;
+    border-radius: 3px;
+    animation: squaremove 0.58s linear infinite;
+}
+@keyframes squaremove {
+    17% {border-bottom-right-radius: 3px;}
+    25% {transform: translatey(9px) rotate(22.5deg);}
+    50% {
+        transform: translatey(18px) scale(1, 0.9)           rotate(45deg);
+        border-bottom-right-radius: 39px;
+    }
+    75% {transform: translatey(9px) rotate(67.5deg);}
+    100% {transform: translatey(0) rotate(90deg);}
+}
+.wave-wrap {
+    position: absolute; 
+    left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
+}
+.wave-box {
+    display: flex;
+}
+.wavecircle {
+    width: 10px; height: 10px; background-image: linear-gradient(to top, #9795f0 0%, #fbc8d4 100%);
+    border-radius: 50%;
+    margin: 5px 10px;
+    transform-origin: top center;
+    animation: spin 1s linear infinite;
+}
+@keyframes spin {
+    0% {transform: scale(1.1) rotate(0);}
+    50% {transform: scale(0.2) rotate(180deg);}
+    100% {transform: scale(1.1) rotate(360deg);}
+}
+.wave-box:nth-child(1) .wavecircle {animation-delay: 100ms;}
+.wave-box:nth-child(2) .wavecircle {animation-delay: 200ms;}
+.wave-box:nth-child(3) .wavecircle {animation-delay: 300ms;}
+.wave-box:nth-child(4) .wavecircle {animation-delay: 400ms;}
+.wave-box:nth-child(5) .wavecircle {animation-delay: 500ms;}
+.wave-box:nth-child(6) .wavecircle {animation-delay: 600ms;}
+.wave-box:nth-child(7) .wavecircle {animation-delay: 700ms;}
+.wave-box:nth-child(8) .wavecircle {animation-delay: 800ms;}
+.wave-box:nth-child(9) .wavecircle {animation-delay: 900ms;}
+
+.cube-box {
+    width: 150px; height: 150px;
+    position: relative;
+    transform: rotatex(60deg) rotate(-140deg) ;
+    transform-style: preserve-3d;
+    animation: rol 8s linear infinite;
+}
+.cube-box > cube {
+    width: 150px; height: 150px;
+    position: absolute; left: 0; top: 0;
+    background: #f44336;
+}
+.cube-box > cube:nth-child(1) {
+    transform: rotatex(90deg) translatey(-150px);
+    transform-origin: center top;
+    animation: top 4s 8s ease-in-out infinite;
+}
+.cube-box > cube:nth-child(2) {
+    transform: rotatex(-90deg) translatey(150px);
+    transform-origin: center bottom;
+    animation: bottom 4s 8s ease-in-out infinite;
+}
+.cube-box > cube:nth-child(3) {
+    transform: rotatey(-90deg) translatex(-150px);
+    transform-origin: left center;
+    animation: left 4s 8s ease-in-out infinite;
+}
+.cube-box > cube:nth-child(4) {
+    transform: rotatey(90deg) translatex(150px);
+    transform-origin: right center;
+    animation: right 4s 8s ease-in-out infinite;
+}
+.cube-box > cube:nth-child(5) {
+    transform: rotatex(0) translatex(0);
+    transform-origin: center center;
+    animation: front 4s 8s ease-in-out infinite;
+}
+.cube-box > cube:nth-child(6) {
+    transform: rotatey(180deg) translatez(150px);
+    transform-origin: center center;
+    animation: back 4s 8s ease-in-out infinite;
+}
+/* @keyframes rol {
+    0% {transform: rotatex(0) rotatey(0) rotatez(0) translatey(0);}
+    100% {
+        transform: rotatex(360deg) rotatey(360deg) 
+        rotatez(360deg) translatey(0);
+    }
+}
+
+@keyframes top {
+    0% {transform: rotatex(90deg) translatey(-150px) translatez(0);}
+    50% {transform: rotatex(90deg) translatey(-150px) translatez(150px);}
+    100% {transform: rotatex(90deg) translatey(-150px) translatez(0);}
+}
+
+@keyframes bottom {
+    0% {transform: rotatex(-90deg) translatey(150px) translatez(0);}
+    50% {transform: rotatex(-90deg) translatey(150px) translatez(150px);}
+    100% {transform: rotatex(-90deg) translatey(150px) translatez(0);}
+}
+
+@keyframes left {
+    0% {transform: rotatey(-90deg) translatex(-150px) scaley(1);}
+    50% {transform: rotatey(-90deg) translatex(-150px) scaley(3);}
+    100% {transform: rotatey(-90deg) translatex(-150px) scaley(1);}
+}
+
+@keyframes right {
+    0% {transform: rotatey(90deg) translatex(150px) scaley(1);}
+    50% {transform: rotatey(90deg) translatex(150px) scaley(3);}
+    100% {transform: rotatey(90deg) translatex(150px) scaley(1);}
+}
+
+@keyframes front {
+    0%   {transform: rotateX(0deg) translateX(0px) scaley(1)}
+    50%  {transform: rotateX(0deg) translateX(0px) scaley(3)}
+    100% {transform: rotateX(0deg) translateX(0px) scaley(1)}
+}
+
+@keyframes back {
+    0%   {transform: rotateY(180deg) translatez(0px) scaley(1);}
+    50%  {transform: rotateY(180deg) translatez(0px) scaley(3);}
+    100% {transform: rotateY(180deg) translatez(0px) scaley(1);}
+} */
 
 /* section7 */
 #section7 {
     width: 100%;
-    height: 360vh;
+    height: 480vh;
+    /* height무조건 있어야 세로스크롤 느낌 나옴 */
 }
 .parallax {
     position: relative;
     height: 100vh;
-    background: powderblue;
+    margin-bottom: 60vh;
 }
 .scriptview-wrap {
     /* margin-left: 638px; */
@@ -1629,19 +1801,85 @@ h2.ftitle2 {
 .script-btn a:last-child {
     margin-right: 0;
 }
-.script-btn a:nth-child(even) {
-    animation: scriptbtnmove1 5s linear infinite;
+.sbtn1 {
+    animation: updown1 5s linear infinite;
 }
-@keyframes scriptbtnmove1 {
-    0%{transform: rotate(0);}
-    100%{transform: rotate(360deg);}
+@keyframes updown1 {
+    0%{transform: translateY(0px) rotate(0);}
+    25%{transform: translateY(13px) rotate(-72deg);}
+    50%{transform: translateY(0px) rotate(-144deg);}
+    75%{transform: translateY(-13px) rotate(-216deg);}
+    100%{transform: translateY(0px) rotate(-360deg);}
 }
-.script-btn a:nth-child(odd) {
-    animation: scriptbtnmove2 8s linear infinite;
+.sbtn2 {
+    animation: updown2 5s 1s linear infinite;
 }
-@keyframes scriptbtnmove2 {
-    0%{transform: rotate(0);}
-    100%{transform: rotate(-360deg);}
+@keyframes updown2 {
+    0%{transform: translateY(0px) rotate(0);}
+    25%{transform: translateY(13px) rotate(-72deg);}
+    50%{transform: translateY(0px) rotate(-144deg);}
+    75%{transform: translateY(-13px) rotate(-216deg);}
+    100%{transform: translateY(0px) rotate(-360deg);}
+}
+.sbtn3 {
+    animation: updown3 5s 2s linear infinite;
+}
+@keyframes updown3 {
+    0%{transform: translateY(0px) rotate(0);}
+    25%{transform: translateY(13px) rotate(72deg);}
+    50%{transform: translateY(0px) rotate(144deg);}
+    75%{transform: translateY(-13px) rotate(216deg);}
+    100%{transform: translateY(0px) rotate(360deg);}
+}
+.sbtn4 {
+    animation: updown4 5s 3s linear infinite;
+}
+@keyframes updown4 {
+    0%{transform: translateY(0px) rotate(0);}
+    25%{transform: translateY(13px) rotate(-72deg);}
+    50%{transform: translateY(0px) rotate(-144deg);}
+    75%{transform: translateY(-13px) rotate(-216deg);}
+    100%{transform: translateY(0px) rotate(-360deg);}
+}
+.sbtn5 {
+    animation: updown5 5s 4s linear infinite;
+}
+@keyframes updown5 {
+    0%{transform: translateY(0px) rotate(0);}
+    25%{transform: translateY(13px) rotate(72deg);}
+    50%{transform: translateY(0px) rotate(144deg);}
+    75%{transform: translateY(-13px) rotate(216deg);}
+    100%{transform: translateY(0px) rotate(360deg);}
+}
+.sbtn6 {
+    animation: updown6 5s 5s linear infinite;
+}
+@keyframes updown6 {
+    0%{transform: translateY(0px) rotate(0);}
+    25%{transform: translateY(13px) rotate(-72deg);}
+    50%{transform: translateY(0px) rotate(-144deg);}
+    75%{transform: translateY(-13px) rotate(-216deg);}
+    100%{transform: translateY(0px) rotate(-360deg);}
+}
+.sbtn7 {
+    animation: updown7 5s 6s linear infinite;
+}
+@keyframes updown7 {
+    0%{transform: translateY(0px) rotate(0);}
+    25%{transform: translateY(13px) rotate(72deg);}
+    50%{transform: translateY(0px) rotate(144deg);}
+    75%{transform: translateY(-13px) rotate(216deg);}
+    100%{transform: translateY(0px) rotate(360deg);}
+}
+.sbtn8 {
+    animation: updown8 5s 7s linear infinite;
+}
+@keyframes updown8 {
+    0%{transform: translateY(0px) rotate(0);}
+    25%{transform: translateY(13px) rotate(-72deg);}
+    50%{transform: translateY(0px) rotate(-144deg);}
+    75%{transform: translateY(-13px) rotate(-216deg);}
+    100%{transform: translateY(0px) rotate(-360deg);}
 }
 .script-num .snum1 {
     position: absolute;
@@ -1660,4 +1898,20 @@ h2.ftitle2 {
     color: #fff;
     letter-spacing: 5px;
     transform: rotate(-90deg);
+}
+.slide {
+    position: relative;
+    height: 100vh;
+    margin-bottom: 60vh;
+}
+.view-box .iframe2 {
+    width: 100%; height: 100%;
+}
+.mouse {
+    position: relative;
+    height: 100vh;
+    margin-bottom: 60vh;
+}
+.view-box .iframe3 {
+    width: 100%; height: 100%;
 }
