--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -9,7 +9,7 @@ body {
     position: relative; z-index: 1000;
     background: #000;
 }
-#section1 {
+#header {
     position: relative;
     z-index: 1000;
     /* background: #1b1b1b; */
@@ -113,219 +113,64 @@ video {
     border: 2px solid white;
 }
 
-/* section1 */
-#section1 {
-    height: 100vh;
-    font-family: 'S-CoreDream-4Regular';
-    color: #fff;
-}
-.section1 {
-    position: relative;
-    transform: skew(0deg, 0deg);
-    opacity: 1;
-    width: 100%;
-}
-.section1 .s1-title {
-    position: absolute; left: 0; top: 10vw;
-    width: 100%;
-}
-.section1 .s1-title .smoke .nosmoke{
-    font-family: 'Ilisarniq-Black';
-    font-size: 7.5vw;
-    line-height: 7.3vw;
-    text-transform: uppercase;
-    text-align: center;
-    width: 100%;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 2px #fff;
-    -moz-text-fill-color: transparent;
-    -moz-text-stroke: 2px #fff;
-    -ms-text-fill-color: transparent;
-    -ms-text-stroke: 2px #fff;
-    -o-text-fill-color: 2px #fff;
-    -o-text-stroke: 2px #fff;
-}
-.section1 .s1-title .smoke .smokespan {
-    font-family: 'Ilisarniq-Black';
-    font-size: 7.5vw;
-    line-height: 7.3vw;
-    width: 100%;
-    text-transform: uppercase;
-    text-align: center;
-    color: #fff;
-}
-.smoke1 {
-    display: inline-block;
-    animation: smoke 1s .25s linear forwards;
+/* split */
+.split {
     opacity: 0;
 }
-@keyframes smoke {
-    0% {
-        opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(0);
-        filter: blur(0);
-    }
-}
-.smoke2 {
+h1.main-tit .split span {
     display: inline-block;
-    animation: smoke2 1s .75s linear forwards;
+    min-width: 1vw;
     opacity: 0;
 }
-@keyframes smoke2 {
-    0% {
-        opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(0);
-        filter: blur(0);
-    }
-}
-.smoke3 {
+.sub-tit.split span {
     display: inline-block;
-    animation: smoke3 1s 1.25s linear forwards;
+    min-width: 0.08vw;
     opacity: 0;
-}
-@keyframes smoke3 {
-    0% {
-        opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(0);
-        filter: blur(0);
-    }
-}
-.smoke4 {
-    display: inline-block;
-    animation: smoke4 1s 1.75s linear forwards;
-    opacity: 0;
-}
-@keyframes smoke4 {
-    0% {
-        opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(0);
-        filter: blur(0);
-    }
-}
-.smoke5 {
-    display: inline-block;
-    animation: smoke5 1s 2.25s linear forwards;
-    opacity: 0;
-}
-@keyframes smoke5 {
-    0% {
-        opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(0);
-        filter: blur(0);
-    }
-}
-.smoke6 {
-    display: inline-block;
-    animation: smoke6 1s 2.75s linear forwards;
-    opacity: 0;
-}
-@keyframes smoke6 {
-    0% {
-        opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(0);
-        filter: blur(0);
-    }
-}
-.smoke7 {
-    display: inline-block;
-    animation: smoke7 1s 3.25s linear forwards;
-    opacity: 0;
-}
-@keyframes smoke7 {
-    0% {
-        opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(0);
-        filter: blur(0);
-    }
-}
-.smoke8 {
-    display: inline-block;
-    animation: smoke8 1s 3.75s linear forwards;
-    opacity: 0;
-}
-@keyframes smoke8 {
-    0% {
-        opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(0);
-        filter: blur(0);
-    }
-}
-.smoke9 {
-    display: inline-block;
-    animation: smoke9 1s 4.25s linear forwards;
-    opacity: 0;
-}
-@keyframes smoke9 {
-    0% {
-        opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(0);
-        filter: blur(0);
-    }
 }
 
-.section1 .s1-title p {
-    margin-top: 1.5vw;
-    text-indent: 0.6vw;
+/* header */
+.header {
+    height: 100vh;
+    position: relative;
+}
+.header-title {
+    width: 72.610vw;
+    position: absolute; left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Ilisarniq-Black';
+    color: #fff;
+}
+.header-title h1.main-tit {
+    font-size: 6.5vw;
+    line-height: 7vw;
+    color: #fff;
+    text-transform: uppercase;
+}
+.header-title h1.main-tit strong {
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 2px #fff;
+}
+.header-title h1.main-tit strong span {
+    transform: translateY(80px);
+}
+.header-title h1.main-tit em span {
+    transform: translateY(80px);
+}
+.header-title .sub-tit {
+    font-size: 2vw;
     font-family: 'Ilisarniq-Light';
-    font-size: 1.15vw;
+    padding-bottom: 10vw;
 }
-.section1 .s1-title p span {
-    font-family: 'Ilisarniq-Regular';
-    font-size: 1.15vw;
-}
-.section1 .s1-desc {
-    position: absolute; left: 0.6vw; top: 39vw;
-}
-.section1 .s1-desc p {
-    font-family: 'S-CoreDream-2ExtraLight';
+.header-title .desc {
+    font-family: 'S-CoreDream-3Light';
     font-size: 1vw;
+    line-height: 1.6vw;
+    transform: translateY(10px);
+    opacity: 0;
 }
-.section1 .s1-desc p strong {font-family: 'S-CoreDream-6Bold';}
+.header-title .desc strong {
+    font-family: 'S-CoreDream-6Bold';
+}
 
 
 /* section2 */
