--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -2,7 +2,7 @@
 body {
     background: #1b1b1b;
     overflow-x: hidden;
-    height: 200vh;
+    height: 300vh;
 }
 #contents {}
 #big-title {
@@ -30,14 +30,14 @@ body {
 /* cursor */
 .cursor {
     position: absolute;
-    border-radius: 50%;
-    width: 100%; height: 100vh;
+    /* width: 100%; height: 100vh; */
     z-index: -1;
     user-select: none;
     pointer-events: none;
     background: url(../img/mainbg.jpg) no-repeat center center fixed; /* body에 있는거 그래도 사용하는데 꼭 background-attachment: fixed가 추가되어야 한다.*/
     background-size: cover; /* 이게 없으면 실제 이미지 크기만큼의 영역이 생겨버린다.*/
     opacity: 0;
+    overflow: hidden;
 }
 .cursorbg {
     position: absolute;
@@ -71,7 +71,7 @@ body {
     overflow: hidden;
 }
 .big-title div {
-    position: relative; top: 220px;
+    position: relative; top: 250px;
     font-family: 'Ilisarniq-Black';
     padding-bottom: 30px;
     /* height: 350px; */
