--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -1,17 +1,22 @@
 /* layout */
+
 body {
     background: #1b1b1b;
     overflow-x: hidden;
 }
 #contents {}
-#big-title {
+/* #big-title {
     height: 100vh;
     background: #fff;
     position: relative;
     overflow: hidden;
-}
+} */
 #header {height: 100vh;}
-#section1 {}
+#section1 {
+    overflow-x: hidden;
+    height: 220vh;
+    margin-top: 300px;
+}
 #section2 {}
 #section3 {}
 #section4 {}
@@ -56,110 +61,6 @@ body {
     z-index: 1000;
     font-style: normal;
 }
-
-/* big-title */
-.big-title {
-    position: absolute; top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 10;
-    width: 100%;
-    /* height: 350px; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-.big-title svg {
-    position: relative;
-     /* top: 250px; */
-    font-family: 'Ilisarniq-Black';
-    /* padding-bottom: 30px; */
-    /* height: 350px; */
-    font-size: 10.4vw;
-    text-transform: uppercase;
-    letter-spacing: 0.53vw;
-    width: 500px; height: 300px;
-}
-.big-title svg.reveal {
-    color: #fff;
-    top: 0;
-    transition: all 1s;
-}
-.big-title svg text {
-    fill: transparent;
-    stroke: #fff;
-    stroke-width: 2px;
-    opacity: 0;
-}
-.big-title svg text.reveal {
-    opacity: 1;
-    animation: stroke 1.2s forwards;
-}
-/* @keyframes stroke {
-    0% {
-      fill: rgba(72,138,204,0); stroke: rgba(54,95,160,1);
-      stroke-dashoffset: 25%;
-      stroke-dasharray: 0 50%;
-    }
-    70% {fill: rgba(72,138,204,0); stroke: rgba(54,95,160,1);}
-    80% {fill: rgba(72,138,204,0); stroke: rgba(54,95,160,1);}
-    100% {
-      fill: rgba(72,138,204,1); stroke: rgba(54,95,160,0);
-      stroke-dashoffset: -25%;
-      stroke-dasharray: 50 0%;
-    }
-} */
-@keyframes stroke {
-    0% {
-      stroke: rgb(255, 255, 255);
-      stroke-dashoffset: 25%;
-      stroke-dasharray: 0 50%;
-    }
-    100% {
-      stroke: rgba(255, 255, 255);
-      stroke-dashoffset: -25%;
-      stroke-dasharray: 50 0%;
-    }
-}
-/* .underline {
-    position: absolute; top: -30px; left: 0;
-    width: inherit;
-    height: 10px !important;
-    border: 2px solid #000;
-} */
-.box-wrap {
-    width: 4000px;
-    height: 100%;
-    font-size: 0;
-    position: absolute;
-    top: 0; bottom: 0; left: 0; right: 0;
-    transform: rotate(45deg);
-}
-.box {
-    width: 7%;
-    height: 3000px;
-    display: inline-block;
-    background-color: rgb(255, 255, 255);
-    position: relative;
-}
-.box.reveal::before {
-    content: '';
-    position: absolute; left: 0; top: 0;
-    width: 100%;
-    height: 100%;
-    background: #1b1b1b;
-    border: 2px solid #1b1b1b;
-    z-index: 1;
-    animation: reveal 1s ease-in-out forwards;
-}
-@keyframes reveal {
-    0% {top: 0; left: 0; width: 0%;}
-    100% {top: 0; left: 0%; width: 100%;}
-}
-
-
-
-
 
 /* split */
 h1.main-tit .split span {
@@ -215,6 +116,415 @@ h1.main-tit .split span {
 }
 .header-title .desc strong {
     font-family: 'S-CoreDream-6Bold';
+}
+
+/* section1 */
+.sec1 {
+    position: relative;
+}
+.left-title {
+    position: relative;
+}
+.left-title h2 {
+    /* position: absolute; top: 1.25vw; left: 7.604vw; */
+    position: absolute; top: 16.25vw; left: 15.604vw;
+    transform: translateX(0);
+    opacity: 0;
+    font-size: 9.986vw;
+    font-family: 'Ilisarniq-Black';
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 0.2vw;
+    transform: skew(0deg, -5deg);
+}
+.left-title.titMove h2 {
+    animation: titMove1 1s ease-in-out forwards;
+}
+@keyframes titMove1 {
+    0% {top: 16.25vw; left: 15.604vw; opacity: 0; transform: skew(0deg, -5deg);}
+    100% {top: 1.25vw; left: 7.604vw; opacity: 1; transform: skew(0deg, 0deg);}
+}
+h2.ftitle {
+    z-index: 10;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 2px #fff;
+    -moz-text-fill-color: transparent;
+    -moz-text-stroke: 2px #fff;
+    -ms-text-fill-color: transparent;
+    -ms-text-stroke: 2px #fff;
+    -o-text-fill-color: 2px #fff;
+    -o-text-stroke: 2px #fff;
+}
+.img-wrap {
+    width: 67.917vw;
+    height: 38.542vw;
+    position: absolute; top: 9.531vw; left: 0;
+    overflow: hidden;
+}
+.img-wrap::before {
+    position: absolute; left: 0; top: 0;
+    content: '';
+    width: 100%; height: 100%;
+    background: rgba(13, 147, 120, 0.5);
+    z-index: 1;
+}
+.sec1-img {
+    background: url(../img/webstandard_silver_gray.jpg) no-repeat center center;
+    width: 100%; height: 100%;
+}
+.left-num-wrap {
+    position: absolute; top: 18vw; left: 86vw;
+    z-index: -1;
+    transform: rotate(90deg);
+    width: 23.906vw; height: 24.74vw;
+}
+.left-num-wrap .left-num {
+    font-size: 20.625vw;
+    text-transform: uppercase;
+    font-family: 'Ilisarniq-Black';
+    letter-spacing: 0.206vw;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 2px #292929;
+}
+.left-desc-wrap {
+    position: absolute; top: 36vw; left: 58.5vw;
+    width: 33.854vw;
+    height: 24.583vw;
+    z-index: 2;
+    background: #fff;
+}
+.left-desc-wrap .left-desc {
+    /* position: absolute; top: 190px; left: 64px; */
+    position: absolute; top: 9.896vw; left: 3.333vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.left-desc-wrap .left-desc ul {
+    width: 27.083vw;
+    margin-top: -5.7vw;
+}
+.left-desc-wrap .left-desc ul .desc-title{
+    font-family: 'Ilisarniq-Black';
+    font-size: 1.302vw;
+    margin-bottom: 0.823vw;
+}
+.left-desc-wrap .left-desc ul .desc-desc{
+    font-family: 'S-CoreDream-3Light';
+    font-size: 0.781vw;
+    line-height: 1.563vw;
+    color: #1b1b1b;
+    text-align: justify;
+}
+.btn-wrap {
+    /* position: absolute; top: 335px; left: 64px; */
+    position: absolute; top: 17.448vw; left: 3.333vw;
+    display: flex;
+    justify-content: space-between;
+    width: 27.083vw;
+
+}
+.btn-wrap a {
+    font-family: 'Ilisarniq-Regular';
+    display: block;
+    width: 12.813vw;
+    height: 48px;
+    box-sizing: border-box;
+    background: #000;
+    text-align: center;
+    line-height: 48px;
+    color: #fff;
+    font-size: 0.938vw;
+    text-transform: uppercase;
+}
+.sec1-circleAll:hover {
+    color: #fff;
+    background: #12DA97;
+}
+.sec1-circleAll.active2 {
+    background: #12DA97;
+}
+.circle-wrap1 {
+    position: absolute; top: 67vw; left: 62vw;
+    font-family: 'Ilisarniq-Regular';
+    font-size: 16px;
+    letter-spacing: 0.56px;
+    text-transform: uppercase;
+    color: #fff;
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5.208vw; height: 5.208vw;
+    border: 2px solid #12DA97;
+    border-radius: 50%;
+    transition: background .2s;
+}
+.circle-wrap1 .sec1-circle1 {
+    animation: sec1-c1 8s linear infinite;
+}
+@keyframes sec1-c1 {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+.circle-wrap2 {
+    position: absolute; top: 74vw; left: 73vw;
+    font-family: 'Ilisarniq-Regular';
+    font-size: 16px;
+    letter-spacing: 0.56px;
+    text-transform: uppercase;
+    color: #fff;
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 7.083vw; height: 7.083vw;
+    border: 2px solid #12DA97;
+    border-radius: 50%;
+    transition: background .2s;
+}
+.circle-wrap2 .sec1-circle2 {
+    animation: sec1-c2 4s linear infinite;
+}
+@keyframes sec1-c2 {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(-360deg);}
+}
+.circle-wrap3 {
+    position: absolute; top: 87vw; left: 70vw;
+    font-family: 'Ilisarniq-Regular';
+    font-size: 16px;
+    letter-spacing: 0.56px;
+    text-transform: uppercase;
+    color: #fff;
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 3.333vw; height: 3.333vw;
+    border: 2px solid #12DA97;
+    border-radius: 50%;
+    transition: background .2s;
+}
+.circle-wrap3 .sec1-circle3 {
+    animation: sec1-c3 7s linear infinite;
+}
+@keyframes sec1-c3 {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(-360deg);}
+}
+.circle-wrap4 {
+    position: absolute; top: 91vw; left: 83.4vw;
+    font-family: 'Ilisarniq-Regular';
+    font-size: 16px;
+    letter-spacing: 0.56px;
+    text-transform: uppercase;
+    color: #fff;
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5.208vw; height: 5.208vw;
+    border: 2px solid #12DA97;
+    border-radius: 50%;
+    transition: background .2s;
+}
+.circle-wrap4 .sec1-circle4 {
+    animation: sec1-c4 15s linear infinite;
+}
+@keyframes sec1-c4 {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+
+.left-chromebox {position: relative;}
+.left-chromebox .left-chromewrap {
+    position: absolute; top: 64.583vw; left: 6.25vw;
+    width: 46.563vw;
+    /* height: 28.49vw; */
+    height: 547px;
+    background: #35363A;
+    border-radius: 5px;
+}
+.menu-bar {
+    position: relative;
+    font-family: "SF Pro Display";
+    font-weight: 300;
+    font-size: 12px;
+    display: flex;
+    width: 100%;
+    /* height: 8%; */
+    height: 42px;
+    border-radius: 5px 5px 0px 0px;
+    background: #202124;
+}
+.menu-bar .circle-bar {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 0 13px;
+    /* padding: 0 0.677vw; */
+    width: 78px;
+    height: 100%;
+    background: #202124;
+    border-radius: 5px 0px 0px 0px;
+}
+.circle-bar .red {
+    margin-right: 8px;
+    width: 12px; height: 12px;
+    border-radius: 50%;
+    background: #ED6A5F;
+}
+.circle-bar .yellow {
+    margin-right: 8px;
+    width: 12px; height: 12px;
+    border-radius: 50%;
+    background: #F6BF4F;
+}
+.circle-bar .green {
+    width: 12px; height: 12px;
+    border-radius: 50%;
+    background: #63C654;
+}
+
+.menu-bar .title-bar {
+    position: absolute; top: 8px; left: 78px;
+    z-index: 20;
+    display: flex;
+    /* width: 88%; */
+    /* width: 42.5vw; */
+    /* height: 100%; */
+    height: 81%;
+    background: #202124;
+}
+.title-bar .htmlTap {
+    width: 12.5vw;
+    
+}
+.title-bar .htmlTap a {
+    display: flex;
+    justify-content: center;
+    line-height: 35px;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background: #18181b;
+    border-radius: 10px 10px 0 0;
+}
+.title-bar .cssTap {
+    width: 12.5vw;
+}
+.title-bar .cssTap a {
+    display: flex;
+    justify-content: center;
+    line-height: 35px;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background: #18181b;
+    border-radius: 10px 10px 0 0;
+}
+.title-bar .scriptTap {
+    width: 12.5vw;
+}
+.title-bar .scriptTap a {
+    display: flex;
+    justify-content: center;
+    line-height: 35px; 
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background: #18181b;
+    border-radius: 10px 10px 0 0;
+}
+.title-bar .tap a.active {
+    background: #35363A;
+}
+.title-bar > div .code-content {
+    position: absolute; top: 74px; left: -74px;
+    z-index: 20;
+    /* width: 885px; height: 460px; 원래크기. 반응형때문에 잠시 주석 */
+    width: 46.094vw; height: 460px;
+    background: #202124; 
+    overflow: auto;
+}
+
+.menu-content {
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+}
+.menu-content .option-bar {
+    font-family: "SF Pro Display";
+    font-weight: 300;
+    display: flex;
+    width: 100%;
+    /* height: 8%; */
+    height: 36px;
+}
+.arrow-box {
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    box-sizing: border-box;
+    width: 108px;
+    height: 37px;
+}
+.option-bar .arrowL {
+    width: 14px;
+    height: 13px;
+    margin-right: 18px;
+}
+.option-bar .arrowR {
+    width: 14px;
+    height: 13px;
+    margin-right: 18px;
+}
+.option-bar .redo {
+    width: 14px;
+    height: 13px;
+}
+.option-bar .address-box {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 84%; */
+    width: 742px;
+    height: 39px;
+    background: #35363A;
+    color: #fff;
+}
+.option-bar .address-box .address {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 28px;
+    background: #202124;
+    border-radius: 30px;
+}
+.option-bar .address-box .address .address-target {
+    position: absolute; top: 9px; left: 33px;
+    display: none;
+}
+.option-bar .address-box .address .address-target.show {
+    display: block;
+}
+.option-bar .address-box .address span {
+    padding: 0 13px 0 14px;
+}
+.option-bar .dot-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 4%; */
+    width: 44px;
+    height: 37px;
+    background: #35363A;
+}
+.option-bar .dot-box .dot {
+    width: 4px;
+    height: 14px;
 }
 
 /* mediaquery */
